--- a/QUOTE.html
+++ b/QUOTE.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <title></title>
     <style>*,
 ::after,
@@ -98,12 +99,12 @@ summary {
     <h1>Quote</h1>
 <p>Quote Date: 2025-04-30<br><strong>Civil Association of the University of Science
 and Humanities</strong></p>
-<div>
-<div class="p-5 red">
+<div class="grid grid-cols-2 py-8">
+<div class="text-green-400">
 <h4>FastSpring</h4>
 <p>8 E. Figueroa Street Suite 240<br>Santa Barbara, CA 93101<br>US<br><a href="mailto:orders@fastspring.com">orders@fastspring.com</a><br>(VAT Number : EU826012240)</p>
 </div>
-<div class="p-5">
+<div >
 <h4>Product Support</h4>
 <p>MKLabs Co., Ltd.<br><a href="http://staruml.io%5C">http://staruml.io\</a>
 <a href="mailto:support@staruml.io">support@staruml.io</a></p>
