--- a/QUOTE.html
+++ b/QUOTE.html
@@ -3,106 +3,209 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-    <style type="text/tailwindcss">
-      @layer base {
-        h1 {
-          @apply mt-10 scroll-m-20 text-4xl font-extrabold tracking-tight lg:text-5xl;
-        }
-        h2 {
-          @apply mt-8 scroll-m-20 border-b pb-2 text-3xl font-semibold tracking-tight first:mt-0;
-        }
-        h3 {
-          @apply mt-6 scroll-m-20 text-2xl font-semibold tracking-tight;
-        }
-        h4 {
-          @apply mt-4 scroll-m-20 text-xl font-semibold tracking-tight;
-        }
-        p {
-          @apply mt-2;
-        }
-        blockquote {
-          @apply mt-2 border-l-2 pl-6 italic;
-        }
-        table {
-          @apply w-full;
-        }
-        tr {
-          @apply m-0 border-t p-0 even:bg-slate-100;
-        }
-        th {
-          @apply border px-2 py-1 text-left font-bold [&[align=center]]:text-center [&[align=right]]:text-right;
-        }
-        td {
-          @apply border px-2 py-1 text-left [&[align=center]]:text-center [&[align=right]]:text-right;
-        }
-        ul {
-          @apply my-2 ml-6 list-disc [&>li]:mt-0;
-        }
-        ol {
-          @apply my-2 ml-6 list-decimal [&>li]:mt-0;
-        }
-        pre {
-          @apply my-2 rounded bg-slate-100 font-mono;
-        }
-        code {
-          @apply relative rounded px-[0.3rem] py-[0.2rem] font-mono;
-        }
-        p code {
-          @apply bg-slate-100 text-xs;
-        }
-        a {
-          @apply underline underline-offset-4;
-        }          
+    <title></title>
+    <style>
+      /* layer: preflights */
+      *,
+      ::before,
+      ::after {
+        --un-rotate: 0;
+        --un-rotate-x: 0;
+        --un-rotate-y: 0;
+        --un-rotate-z: 0;
+        --un-scale-x: 1;
+        --un-scale-y: 1;
+        --un-scale-z: 1;
+        --un-skew-x: 0;
+        --un-skew-y: 0;
+        --un-translate-x: 0;
+        --un-translate-y: 0;
+        --un-translate-z: 0;
+        --un-pan-x: ;
+        --un-pan-y: ;
+        --un-pinch-zoom: ;
+        --un-scroll-snap-strictness: proximity;
+        --un-ordinal: ;
+        --un-slashed-zero: ;
+        --un-numeric-figure: ;
+        --un-numeric-spacing: ;
+        --un-numeric-fraction: ;
+        --un-border-spacing-x: 0;
+        --un-border-spacing-y: 0;
+        --un-ring-offset-shadow: 0 0 rgb(0 0 0 / 0);
+        --un-ring-shadow: 0 0 rgb(0 0 0 / 0);
+        --un-shadow-inset: ;
+        --un-shadow: 0 0 rgb(0 0 0 / 0);
+        --un-ring-inset: ;
+        --un-ring-offset-width: 0px;
+        --un-ring-offset-color: #fff;
+        --un-ring-width: 0px;
+        --un-ring-color: rgb(147 197 253 / 0.5);
+        --un-blur: ;
+        --un-brightness: ;
+        --un-contrast: ;
+        --un-drop-shadow: ;
+        --un-grayscale: ;
+        --un-hue-rotate: ;
+        --un-invert: ;
+        --un-saturate: ;
+        --un-sepia: ;
+        --un-backdrop-blur: ;
+        --un-backdrop-brightness: ;
+        --un-backdrop-contrast: ;
+        --un-backdrop-grayscale: ;
+        --un-backdrop-hue-rotate: ;
+        --un-backdrop-invert: ;
+        --un-backdrop-opacity: ;
+        --un-backdrop-saturate: ;
+        --un-backdrop-sepia: ;
+      }
+      ::backdrop {
+        --un-rotate: 0;
+        --un-rotate-x: 0;
+        --un-rotate-y: 0;
+        --un-rotate-z: 0;
+        --un-scale-x: 1;
+        --un-scale-y: 1;
+        --un-scale-z: 1;
+        --un-skew-x: 0;
+        --un-skew-y: 0;
+        --un-translate-x: 0;
+        --un-translate-y: 0;
+        --un-translate-z: 0;
+        --un-pan-x: ;
+        --un-pan-y: ;
+        --un-pinch-zoom: ;
+        --un-scroll-snap-strictness: proximity;
+        --un-ordinal: ;
+        --un-slashed-zero: ;
+        --un-numeric-figure: ;
+        --un-numeric-spacing: ;
+        --un-numeric-fraction: ;
+        --un-border-spacing-x: 0;
+        --un-border-spacing-y: 0;
+        --un-ring-offset-shadow: 0 0 rgb(0 0 0 / 0);
+        --un-ring-shadow: 0 0 rgb(0 0 0 / 0);
+        --un-shadow-inset: ;
+        --un-shadow: 0 0 rgb(0 0 0 / 0);
+        --un-ring-inset: ;
+        --un-ring-offset-width: 0px;
+        --un-ring-offset-color: #fff;
+        --un-ring-width: 0px;
+        --un-ring-color: rgb(147 197 253 / 0.5);
+        --un-blur: ;
+        --un-brightness: ;
+        --un-contrast: ;
+        --un-drop-shadow: ;
+        --un-grayscale: ;
+        --un-hue-rotate: ;
+        --un-invert: ;
+        --un-saturate: ;
+        --un-sepia: ;
+        --un-backdrop-blur: ;
+        --un-backdrop-brightness: ;
+        --un-backdrop-contrast: ;
+        --un-backdrop-grayscale: ;
+        --un-backdrop-hue-rotate: ;
+        --un-backdrop-invert: ;
+        --un-backdrop-opacity: ;
+        --un-backdrop-saturate: ;
+        --un-backdrop-sepia: ;
+      }
+      /* layer: default */
+      .grid {
+        display: grid;
+      }
+      .grid-cols-2 {
+        grid-template-columns: repeat(2, minmax(0, 1fr));
+      }
+      .h-24 {
+        height: 6rem;
+      }
+      .px-8 {
+        padding-left: 2rem;
+        padding-right: 2rem;
+      }
+      .py-8 {
+        padding-top: 2rem;
+        padding-bottom: 2rem;
       }
     </style>
-    <title></title>
   </head>
   <body>
-    <h1>Quote</h1>
-<p>Quote Date: 2025-04-30<br><strong>Civil Association of the University of Science
-and Humanities</strong></p>
-<div class="grid grid-cols-2 py-8 px-8">
-<div >
-<h4>FastSpring</h4>
-<p>8 E. Figueroa Street Suite 240<br>Santa Barbara, CA 93101<br>US<br><a href="mailto:orders@fastspring.com">orders@fastspring.com</a><br>(VAT Number : EU826012240)</p>
-</div>
-<div >
-<h4>Product Support</h4>
-<p>MKLabs Co., Ltd.<br><a href="http://staruml.io%5C">http://staruml.io\</a>
-<a href="mailto:support@staruml.io">support@staruml.io</a></p>
-</div>
-</div>
-<table>
-<thead>
-<tr>
-<th>Description</th>
-<th>Unit</th>
-<th>Quantity</th>
-<th align="right">Amount</th>
-</tr>
-</thead>
-<tbody><tr>
-<td>StarUML 6 Professional</td>
-<td>$169</td>
-<td>100</td>
-<td align="right">$16,900</td>
-</tr>
-<tr>
-<td></td>
-<td></td>
-<td><strong>Total</strong></td>
-<td align="right"><strong>$16,900</strong></td>
-</tr>
-</tbody></table>
-<h4>Sales Taxes</h4>
-<p>Depending on your billing address, additional sales taxes may apply during checkout.</p>
-<h4>Purchase Orders</h4>
-<p>Please send an approved purchase order to <a href="mailto:support@staruml.io">support@staruml.io</a>.</p>
-<div class="h-24"></div>
-<p><strong>MKLabs Co., Ltd.</strong><br>#114, Lotte World Wellbeing Center Building, 240 Olympic-ro, Songpa-gu, Seoul, Republic of Korea.</p>
-<p>StarUML licenses are sold by our trusted reseller, FastSpring LLC. They are a U.S. based company. Their
-W9 form is available at: http://<a href="http://www.fastspring.com/w9.pdf">www.fastspring.com/w9.pdf</a></p>
-
+    <article class="prose">
+      <h1>Quote</h1>
+      <p>
+        Quote Date: 2025-04-30<br /><strong
+          >Civil Association of the University of Science and Humanities</strong
+        >
+      </p>
+      <div class="grid grid-cols-2 py-8 px-8">
+        <div>
+          <h4>FastSpring</h4>
+          <p>
+            8 E. Figueroa Street Suite 240<br />Santa Barbara, CA 93101<br />US<br /><a
+              href="mailto:orders@fastspring.com"
+              >orders@fastspring.com</a
+            ><br />(VAT Number : EU826012240)
+          </p>
+        </div>
+        <div>
+          <h4>Product Support</h4>
+          <p>
+            MKLabs Co., Ltd.<br /><a href="http://staruml.io%5C"
+              >http://staruml.io\</a
+            >
+            <a href="mailto:support@staruml.io">support@staruml.io</a>
+          </p>
+        </div>
+      </div>
+      <table>
+        <thead>
+          <tr>
+            <th>Description</th>
+            <th>Unit</th>
+            <th>Quantity</th>
+            <th align="right">Amount</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>StarUML 6 Professional</td>
+            <td>$169</td>
+            <td>100</td>
+            <td align="right">$16,900</td>
+          </tr>
+          <tr>
+            <td></td>
+            <td></td>
+            <td><strong>Total</strong></td>
+            <td align="right"><strong>$16,900</strong></td>
+          </tr>
+        </tbody>
+      </table>
+      <h4>Sales Taxes</h4>
+      <p>
+        Depending on your billing address, additional sales taxes may apply
+        during checkout.
+      </p>
+      <h4>Purchase Orders</h4>
+      <p>
+        Please send an approved purchase order to
+        <a href="mailto:support@staruml.io">support@staruml.io</a>.
+      </p>
+      <div class="h-24"></div>
+      <p>
+        <strong>MKLabs Co., Ltd.</strong><br />#114, Lotte World Wellbeing
+        Center Building, 240 Olympic-ro, Songpa-gu, Seoul, Republic of Korea.
+      </p>
+      <p>
+        StarUML licenses are sold by our trusted reseller, FastSpring LLC. They
+        are a U.S. based company. Their W9 form is available at: http://<a
+          href="http://www.fastspring.com/w9.pdf"
+          >www.fastspring.com/w9.pdf</a
+        >
+      </p>
+    </article>
   </body>
 </html>
