--- a/EMAIL.html
+++ b/EMAIL.html
@@ -3,34 +3,70 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Quote Doc</title>
-    <style>.prose table { display: table; width: 100% }</style>
+    <title>Email</title>
+    <style></style>
     <style>/* layer: fonts */
-/* cyrillic */
+/* cyrillic-ext */
 @font-face {
-  font-family: 'Geist';
+  font-family: 'Inter';
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: url(https://fonts.gstatic.com/s/geist/v3/gyBhhwUxId8gMGYQMKR3pzfaWI_RnOMInpna6VEdtaiLqoA.woff2) format('woff2');
+  src: url(https://fonts.gstatic.com/s/inter/v19/UcCO3FwrK3iLTeHuS_nVMrMxCp50SjIw2boKoduKmMEVuLyfAZJhiJ-Ek-_EeAmM.woff2) format('woff2');
+  unicode-range: U+0460-052F, U+1C80-1C8A, U+20B4, U+2DE0-2DFF, U+A640-A69F, U+FE2E-FE2F;
+}
+/* cyrillic */
+@font-face {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/inter/v19/UcCO3FwrK3iLTeHuS_nVMrMxCp50SjIw2boKoduKmMEVuLyfAZthiJ-Ek-_EeAmM.woff2) format('woff2');
   unicode-range: U+0301, U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
+}
+/* greek-ext */
+@font-face {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/inter/v19/UcCO3FwrK3iLTeHuS_nVMrMxCp50SjIw2boKoduKmMEVuLyfAZNhiJ-Ek-_EeAmM.woff2) format('woff2');
+  unicode-range: U+1F00-1FFF;
+}
+/* greek */
+@font-face {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/inter/v19/UcCO3FwrK3iLTeHuS_nVMrMxCp50SjIw2boKoduKmMEVuLyfAZxhiJ-Ek-_EeAmM.woff2) format('woff2');
+  unicode-range: U+0370-0377, U+037A-037F, U+0384-038A, U+038C, U+038E-03A1, U+03A3-03FF;
+}
+/* vietnamese */
+@font-face {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/inter/v19/UcCO3FwrK3iLTeHuS_nVMrMxCp50SjIw2boKoduKmMEVuLyfAZBhiJ-Ek-_EeAmM.woff2) format('woff2');
+  unicode-range: U+0102-0103, U+0110-0111, U+0128-0129, U+0168-0169, U+01A0-01A1, U+01AF-01B0, U+0300-0301, U+0303-0304, U+0308-0309, U+0323, U+0329, U+1EA0-1EF9, U+20AB;
 }
 /* latin-ext */
 @font-face {
-  font-family: 'Geist';
+  font-family: 'Inter';
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: url(https://fonts.gstatic.com/s/geist/v3/gyBhhwUxId8gMGYQMKR3pzfaWI_RnOMIlJna6VEdtaiLqoA.woff2) format('woff2');
+  src: url(https://fonts.gstatic.com/s/inter/v19/UcCO3FwrK3iLTeHuS_nVMrMxCp50SjIw2boKoduKmMEVuLyfAZFhiJ-Ek-_EeAmM.woff2) format('woff2');
   unicode-range: U+0100-02BA, U+02BD-02C5, U+02C7-02CC, U+02CE-02D7, U+02DD-02FF, U+0304, U+0308, U+0329, U+1D00-1DBF, U+1E00-1E9F, U+1EF2-1EFF, U+2020, U+20A0-20AB, U+20AD-20C0, U+2113, U+2C60-2C7F, U+A720-A7FF;
 }
 /* latin */
 @font-face {
-  font-family: 'Geist';
+  font-family: 'Inter';
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: url(https://fonts.gstatic.com/s/geist/v3/gyBhhwUxId8gMGYQMKR3pzfaWI_RnOMImpna6VEdtaiL.woff2) format('woff2');
+  src: url(https://fonts.gstatic.com/s/inter/v19/UcCO3FwrK3iLTeHuS_nVMrMxCp50SjIw2boKoduKmMEVuLyfAZ9hiJ-Ek-_EeA.woff2) format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 /* cyrillic-ext */
@@ -122,68 +158,40 @@
 .prose{color:var(--un-prose-body);max-width:65ch;}
 .prose-truegray{--un-prose-body:#404040;--un-prose-headings:#171717;--un-prose-links:#171717;--un-prose-lists:#a3a3a3;--un-prose-hr:#e5e5e5;--un-prose-captions:#737373;--un-prose-code:#171717;--un-prose-borders:#e5e5e5;--un-prose-bg-soft:#f5f5f5;--un-prose-invert-body:#e5e5e5;--un-prose-invert-headings:#f5f5f5;--un-prose-invert-links:#f5f5f5;--un-prose-invert-lists:#737373;--un-prose-invert-hr:#404040;--un-prose-invert-captions:#a3a3a3;--un-prose-invert-code:#f5f5f5;--un-prose-invert-borders:#404040;--un-prose-invert-bg-soft:#262626;}
 /* layer: default */
-.grid{display:grid;}
-.grid-cols-2{grid-template-columns:repeat(2,minmax(0,1fr));}
 .m-0{margin:0;}
 .mx-auto{margin-left:auto;margin-right:auto;}
-.max-w-2xl{max-width:42rem;}
+.my-0{margin-top:0;margin-bottom:0;}
+.max-w-\[500px\]{max-width:500px;}
+.bg-sky-200{--un-bg-opacity:1;background-color:rgb(186 230 253 / var(--un-bg-opacity));}
+.bg-white{--un-bg-opacity:1;background-color:rgb(255 255 255 / var(--un-bg-opacity));}
 .p-0{padding:0;}
-.px-4{padding-left:1rem;padding-right:1rem;}
-.py-4{padding-top:1rem;padding-bottom:1rem;}
-.font-semibold{font-weight:600;}
-.font-sans{font-family:"Geist",ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";}</style>
+.p-6{padding:1.5rem;}
+.font-mono{font-family:"JetBrains Mono",ui-monospace,SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace;}</style>
   </head>
-  <body class="p-0 m-0"><main class="prose prose-truegray font-sans max-w-2xl mx-auto"><h1>Quote</h1>
-<p>Quote Date: 2025-04-30<br><strong>Civil Association of the University of Science
-and Humanities</strong></p>
-<div class="grid grid-cols-2 py-4 px-4">
-<div >
-<h4>FastSpring</h4>
-<p>8 E. Figueroa Street Suite 240<br>Santa Barbara, CA 93101<br>US<br><a href="mailto:orders@fastspring.com">orders@fastspring.com</a><br>(VAT Number : EU826012240)</p>
+  <body class="p-0 m-0"><main class="prose prose-truegray max-w-[500px] mx-auto bg-white my-0 font-mono"><p>We are so glad to announce StarUML V7 release. The key changes in V7 are as follows.</p>
+<h2>Device-based licensing model</h2>
+<p>Starting from V7, the licensing model is changing from a user-based model to a device-based model. There have been concerns about the legal ambiguity and management difficulties of the user-based licensing model. The device-based licensing model is much clearer since it only manages the number of devices on which the software can be installed and used, eliminating legal ambiguity. Additionally, it provides convenience for license administrators, as they can easily check and manage the installed devices through a separate web-based <a href="https:/v7.staruml-io-astro.pages.dev/license-manager">license manager</a>.</p>
+<hr>
+<h2>Mermaid Support</h2>
+<p>StarUML is highly suitable for creating professional and sophisticated software models. However, sometimes there is a need to quickly and easily generate initial diagrams. In such cases, text-based diagramming languages like <a href="https://mermaid.js.org/">Mermaid</a> are very efficient. In V7, a feature is provided that instantly generates the corresponding diagram with the <strong>Tools &gt; Generate Diagram by Mermaid...</strong> menu. It supports seven types of Mermaid diagrams: class diagram, sequence diagram, state diagram, flowchart, entity-relationship diagram, requirement diagram, and mindmap.</p>
+<p><img src="https:/v7.staruml-io-astro.pages.dev/images/blog/mermaid.png" alt="Mermaid Support"> Mermaid Support</p>
+<hr>
+<h2>Azure Architecture Diagram (Pro)</h2>
+<p>Until now, architecture support has been provided for AWS and GCP to design cloud-based systems. In the Professional edition of V7, support for designing <a href="https://azure.microsoft.com/">Microsoft Azure</a> architecture is also included.</p>
+<p><img src="https:/v7.staruml-io-astro.pages.dev/images/blog/azure-architecture.png" alt="Azure Architecture"> Azure Architecture Diagram</p>
+<hr>
+<h2>AI integration via MCP</h2>
+<p>Artificial intelligence is currently the hottest and most important topic. With AI being integrated into all products and services, productivity is significantly increasing. Starting from StarUML V7, an <a href="https://modelcontextprotocol.io">MCP (Model Context Protocol)</a> server is provided to enable integration with AI. By adding the <a href="https://github.com/staruml/staruml-mcp-server">StarUML MCP server</a> to existing AI services such as Claude and Cursor, users can easily generate diagrams or create source code, database schemas, etc., from existing diagrams. Here are some example prompts:</p>
+<ul>
+<li><em>&quot;Create a class diagram for book store in StarUML&quot;</em></li>
+<li><em>&quot;Create a sequence diagram for OAuth authentication in StarUML&quot;</em></li>
+<li><em>&quot;Generate SQL DDL from the current ERD diagram in StarUML&quot;</em></li>
+</ul>
+<p><img src="https:/v7.staruml-io-astro.pages.dev/images/blog/mcp-server.png" alt="AI integration via MCP"> AI integration via MCP</p>
+<hr>
+<p>There are more features and resolved issues except for the described in this article. You can find them in the <a href="https:/v7.staruml-io-astro.pages.dev/changelog">changelog</a>. Hope you enjoy and satisfies with the new StarUML V7. Thank you.</p>
+<div class="bg-sky-200 p-6">
+<p>MKLabs Co., Ltd.</p>
 </div>
-<div>
-<h4>Product Support</h4>
-<p>MKLabs Co., Ltd.<br><a href="http://staruml.io%5C">http://staruml.io\</a>
-<a href="mailto:support@staruml.io">support@staruml.io</a></p>
-</div>
-</div>
-<table>
-<thead>
-<tr>
-<th>Description</th>
-<th>Unit</th>
-<th>Quantity</th>
-<th align="right">Amount</th>
-</tr>
-</thead>
-<tbody><tr>
-<td>StarUML 6 Professional</td>
-<td>$169</td>
-<td>100</td>
-<td align="right">$16,900</td>
-</tr>
-<tr>
-<td>Reseller margin (-10%)</td>
-<td></td>
-<td></td>
-<td align="right">-$16,90</td>
-</tr>
-<tr>
-<td></td>
-<td></td>
-<td><strong>Total</strong></td>
-<td align="right"><strong>$15,210</strong></td>
-</tr>
-</tbody></table>
-<h4>Sales Taxes</h4>
-<p>Depending on your <code>billing address</code>, additional <strong>sales taxes</strong> may apply during checkout.</p>
-<p>This is <span class="font-semibold">inline content text <code>mono</code></span></p>
-<h4>Purchase Orders</h4>
-<p>Please send an approved purchase order to <a href="mailto:support@staruml.io">support@staruml.io</a>.</p>
-<pre><code class="language-js">const x = 100;
-</code></pre>
-<p><strong>MKLabs Co., Ltd.</strong><br>#114, Lotte World Wellbeing Center Building, 240 Olympic-ro, Songpa-gu, Seoul, Republic of Korea.</p>
-<p>StarUML licenses are sold by our trusted reseller, FastSpring LLC. They are a U.S. based company. Their
-W9 form is available at: http://<a href="http://www.fastspring.com/w9.pdf">www.fastspring.com/w9.pdf</a></p>
 </main></body>
 </html>
